--- a/styles/AppointmentModal.module.css
+++ b/styles/AppointmentModal.module.css
@@ -6,6 +6,14 @@
   flex-direction: column;
 }
 
+.modal > h2 {
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    padding: 20px;
+    width: 100%;
+    text-align: center;
+    z-index: 2;
+}
+
 .dateTimeSection {
   width: 100%;
   max-width: 1000px;
@@ -82,7 +90,7 @@
 }
 
 .label {
-  width: 80%; /* Center the labels */
+    width: 80%;
   display: block;
   font-weight: bold;
   margin: 0 auto 5px;
@@ -90,8 +98,8 @@
 
 .input {
   display: block;
-  width: 80%; /* Reduced width for better spacing */
-  margin: 10px auto 30px; /* Centered the input fields */
+    width: 80%;
+    margin: 10px auto 30px;
   padding: 8px;
   font-size: 16px;
   border: 1px solid #ccc;
@@ -114,20 +122,28 @@
   margin: 10px 0;
 }
 
+.buttonContainerSingle {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
+    padding: 20px;
+}
+
 .buttonContainer {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin-top: 20px;
-  padding: 0 20px;
+    padding: 20px;
 }
 
-.buttonContainerSingle {
+.buttonContainerSingle,
+.buttonContainer {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
-  margin-top: 20px;
-  padding: 0 20px;
+    justify-content: space-between;
+    padding: 20px;
+    box-shadow: 0 -8px 6px rgba(0, 0, 0, 0.1);
 }
 
 .buttonLeft,
