--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -18,7 +18,6 @@
 
 .modalContent {
   background-color: white;
-  padding: 20px;
   border-radius: 5px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   position: relative;
@@ -41,6 +40,7 @@
   font-size: 2rem;
   cursor: pointer;
   width: 30px;
+  z-index: 3;
 }
 
 @keyframes fadeIn {
