--- a/styles/AdminClients.module.css
+++ b/styles/AdminClients.module.css
@@ -1,77 +1,83 @@
 .section {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .createButton {
-    padding: 10px 15px;
-    border: none;
-    background-color: var(--color-tertiary);
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 1em;
+  padding: 10px 15px;
+  border: none;
+  background-color: var(--color-tertiary);
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1em;
 }
 
 .createButton:hover {
-    background-color: var(--rich-brown);
+  background-color: var(--rich-brown);
 }
 
 .list {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .listItem {
-    background-color: var(--color-primary);
-    padding: 20px;
-    margin-bottom: 10px;
-    border-radius: 8px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: var(--color-primary);
+  padding: 20px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .clientInfo {
-    flex: 1;
-    margin-right: 20px;
+  flex: 1;
+  margin-right: 20px;
 }
 
 .clientInfo h3 {
-    margin: 0;
-    font-size: 1.2em;
-    color: var(--dark-espresso);
+  margin: 0;
+  font-size: 1.2em;
+  color: var(--dark-espresso);
 }
 
 .clientInfo p {
-    margin: 5px 0;
-    font-size: 0.9em;
-    color: var(--dark-espresso);
+  margin: 5px 0;
+  font-size: 0.9em;
+  color: var(--dark-espresso);
 }
 
 .buttonGroup {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .button {
-    padding: 10px 15px;
-    border: none;
-    background-color: var(--color-tertiary);
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 0.9em;
+  padding: 10px 15px;
+  border: none;
+  background-color: var(--color-tertiary);
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 0.9em;
 }
 
 .button:hover {
-    background-color: var(--rich-brown);
+  background-color: var(--rich-brown);
+}
+
+.link,
+.link:visited {
+  color: var(--color-quaternary);
+  text-decoration: none;
 }
