--- a/styles/AdminClients.module.css
+++ b/styles/AdminClients.module.css
@@ -1,5 +1,5 @@
 .section {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .header {
@@ -14,9 +14,10 @@
   border: none;
   background-color: var(--color-tertiary);
   color: white;
-  border-radius: 4px;
+  border-radius: 8px;
   cursor: pointer;
   font-size: 1em;
+  transition: background-color 0.3s;
 }
 
 .createButton:hover {
@@ -37,6 +38,7 @@
   justify-content: space-between;
   align-items: flex-start;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border: 1px solid #e0e0e0;
 }
 
 .clientInfo {
@@ -45,15 +47,29 @@
 }
 
 .clientInfo h3 {
-  margin: 0;
+  margin: 0 0 10px 0;
   font-size: 1.2em;
-  color: var(--dark-espresso);
+  color: #343a40;
 }
 
 .clientInfo p {
   margin: 5px 0;
   font-size: 0.9em;
-  color: var(--dark-espresso);
+  color: #212529;
+}
+
+.subscriptionInfo {
+  margin-top: 10px;
+  padding: 20px;
+  background-color: var(--color-secondary);
+  border-radius: 8px;
+  font-size: 0.9em;
+  color: #212529;
+  border: 1px solid #e0e0e0;
+}
+
+.subscriptionInfo p {
+  margin: 5px 0;
 }
 
 .buttonGroup {
@@ -67,9 +83,10 @@
   border: none;
   background-color: var(--color-tertiary);
   color: white;
-  border-radius: 4px;
+  border-radius: 8px;
   cursor: pointer;
   font-size: 0.9em;
+  transition: background-color 0.3s;
 }
 
 .button:hover {
@@ -80,4 +97,9 @@
 .link:visited {
   color: var(--color-quaternary);
   text-decoration: none;
+  transition: color 0.3s;
+}
+
+.link:hover {
+  color: var(--rich-brown);
 }
