--- a/styles/AppointmentModal.module.css
+++ b/styles/AppointmentModal.module.css
@@ -1,5 +1,8 @@
 .modal {
-  height: 100%;
+    height: 800px;
+    width: 1200px;
+    max-width: 100%;
+    max-height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
