--- a/styles/ClientFormModal.module.css
+++ b/styles/ClientFormModal.module.css
@@ -1,13 +1,12 @@
 .modalContent {
   border-radius: 8px;
   padding: 20px;
-  max-width: 1000px;
   margin: 0 auto;
   overflow-y: auto;
   height: 100%;
-  width: 80%;
+    width: 900px;
+    max-width: 100%;
   background: #fff;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .form {
