--- a/styles/WorkingHoursFormModal.module.css
+++ b/styles/WorkingHoursFormModal.module.css
@@ -1,11 +1,11 @@
 .modalContent {
     border-radius: 8px;
     padding: 20px;
-    max-width: 1000px;
     margin: 0 auto;
     overflow-y: auto;
     height: 100%;
-    width: 80%;
+    width: 400px;
+    max-width: 100%;
     background: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
