--- a/styles/PricingCard.module.css
+++ b/styles/PricingCard.module.css
@@ -1,3 +1,57 @@
+.skeletonCard {
+  min-height: 500px;
+}
+
+.skeletonContent {
+  height: 100%;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.skeletonTitle,
+.skeletonDescription,
+.skeletonPriceContainer {
+  background: linear-gradient(
+          to right,
+          #e0e0e0 0%,
+          #f0f0f0 20%,
+          #e0e0e0 40%,
+          #e0e0e0 100%
+  );
+  background-size: 1000px 100%;
+  animation: shimmer 2s infinite linear;
+  border-radius: 4px;
+}
+
+.skeletonTitle {
+  width: 70%;
+  height: 24px;
+  margin-bottom: 8px;
+}
+
+.skeletonDescription {
+  width: 100%;
+  height: 16px;
+  margin-bottom: 8px;
+}
+
+.skeletonPriceContainer {
+  width: 30%;
+  height: 16px;
+  margin-bottom: 8px;
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -1000px 0;
+  }
+  100% {
+    background-position: 1000px 0;
+  }
+}
+
 /* ------------------ LINE ANIMATIONS ------------------ */
 
 @keyframes moveLine {
@@ -87,7 +141,6 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   display: flex;
   justify-content: space-between;
-  min-height: 100%;
   transition: 0.3s;
 }
 
