--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -1,5 +1,5 @@
 .modalOpen {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .modalBackdrop {
@@ -25,10 +25,10 @@
   border-radius: 5px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   position: relative;
-    max-height: 90%;
-    max-width: 90%;
+  max-height: 90%;
+  max-width: 90%;
   animation: slideIn 0.3s ease-out;
-    overflow-y: auto;
+  overflow-y: auto;
 }
 
 .modalContent.slideOut {
@@ -39,11 +39,18 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  background: none;
-  border: none;
   font-size: 2rem;
   cursor: pointer;
   width: 30px;
+  height: 30px;
+  background-color: white;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10%;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3),
+  0 0 5px rgba(0, 0, 0, 0.3);
   z-index: 3;
 }
 
@@ -80,5 +87,20 @@
   }
   to {
     transform: translateY(-20px);
+  }
+}
+
+@media (max-width: 600px) {
+  .modalContent {
+    width: 95%;
+    height: 95%;
+    max-width: none;
+    max-height: none;
+    border-radius: 10px;
+  }
+
+  .closeButton {
+    top: 5px;
+    right: 5px;
   }
 }
