--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -101,13 +101,17 @@
   justify-content: center;
 }
 
-.aboutSectionImage {
-  flex: 1;
-  max-width: 700px;
-  height: auto;
-  width: auto;
-  border-radius: 10px;
+.aboutSectionImageWrapper {
+  max-width: 50%;
   margin: auto;
+}
+
+.aboutSectionImage {
+  height: auto;
+  max-height: 803px;
+  max-width: 642px;
+  width: 100%;
+  border-radius: 10px;
   box-shadow: -10px 10px 20px 5px rgba(0, 0, 0, 0.1),
   10px 10px 20px 5px rgba(0, 0, 0, 0.1);
   transition: 0.2s;
@@ -118,8 +122,6 @@
   max-width: 40%;
   width: 100%;
   margin: auto;
-  /*padding: 50px;*/
-  padding-left: 50px;
 }
 
 .aboutSectionText h2 {
@@ -200,12 +202,9 @@
 }
 
 @media (max-width: 1100px) {
-  .aboutSectionImage {
-    max-width: 100%;
-  }
-
   .aboutSectionText {
     max-width: 60%;
+    padding-left: 50px;
   }
 }
 
@@ -213,10 +212,6 @@
   .aboutSectionWrapper {
     flex-direction: column;
     text-align: center;
-  }
-
-  .aboutSectionImage {
-    max-width: 100%;
   }
 
   .aboutSectionText {
@@ -248,6 +243,15 @@
     justify-content: right;
     top: 0;
     background-color: transparent;
+  }
+
+  .aboutSectionImageWrapper {
+    width: auto;
+    max-width: none;
+  }
+
+  .aboutSectionImage {
+    max-width: 100%;
   }
 
   .sunImage3 {
