--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -44,13 +44,13 @@
   width: 30px;
   height: 30px;
   background-color: white;
-  border: 1px solid black;
+  border: none;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 10%;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3),
-  0 0 5px rgba(0, 0, 0, 0.3);
+  box-shadow: -1px 1px 10px 1px rgba(0, 0, 0, 0.1),
+  1px 1px 10px 1px rgba(0, 0, 0, 0.1);
   z-index: 3;
 }
 
