--- a/styles/Drawer.module.css
+++ b/styles/Drawer.module.css
@@ -3,7 +3,7 @@
   top: 0;
   height: 100%;
   width: 250px;
-  background-color: var(--color-tertiary);
+  background-color: var(--color-primary);
   overflow-x: hidden;
   transform: translateX(-100%);
   transition: transform 0.3s ease;
@@ -11,7 +11,7 @@
 }
 
 .drawerBackground {
-  background-color: var(--color-tertiary);
+  background-color: var(--color-primary);
 }
 
 .drawer.right {
@@ -35,13 +35,16 @@
 }
 
 .navLink {
-  color: white;
+  color: black;
   text-decoration: none;
   display: block;
+  font-size: 1.2em;
+  padding: 10px 15px;
+  border-radius: 5px;
 }
 
 .navLink:hover {
-  background-color: #575757;
+  background-color: var(--color-tertiary);
 }
 
 .menuButton {
@@ -75,7 +78,7 @@
   cursor: pointer;
   background: none;
   border: none;
-  color: white;
+  color: black;
   position: absolute;
   top: 15px;
   right: 15px;
@@ -98,6 +101,7 @@
 @media (min-width: 768px) {
   .navBar {
     display: block;
+    width: 190px;
   }
 
   .alwaysVisible {
