feat: active navigation item styling

--- a/styles/Drawer.module.css
+++ b/styles/Drawer.module.css
@@ -47,6 +47,11 @@
   background-color: var(--color-tertiary);
 }
 
+.activeLink {
+  background-color: var(--color-secondary);
+  color: black;
+}
+
 .menuButton {
   font-size: 30px;
   cursor: pointer;
