--- a/styles/Drawer.module.css
+++ b/styles/Drawer.module.css
@@ -10,7 +10,7 @@
   z-index: 1000;
 }
 
-.drawerBackground {
+.drawerContainer {
   background-color: var(--color-primary);
 }
 
@@ -106,7 +106,22 @@
 @media (min-width: 768px) {
   .navBar {
     display: block;
-    width: 190px;
+    width: 100%;
+  }
+
+  .navList {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+  }
+
+  .horizontal {
+    flex-direction: row;
   }
 
   .alwaysVisible {
