fix: horizontal display disappearing

--- a/styles/Drawer.module.css
+++ b/styles/Drawer.module.css
@@ -69,7 +69,8 @@
   background-color: white;
   padding-bottom: 5px;
   border-radius: 10%;
-  box-shadow: -1px 1px 10px 1px rgba(0, 0, 0, 0.1),
+  box-shadow:
+    -1px 1px 10px 1px rgba(0, 0, 0, 0.1),
     1px 1px 10px 1px rgba(0, 0, 0, 0.1);
 }
 
@@ -101,4 +102,8 @@
 
 .navBar {
   display: none;
+}
+
+.horizontal {
+  flex-direction: row !important;
 }
