--- a/styles/Drawer.module.css
+++ b/styles/Drawer.module.css
@@ -38,18 +38,19 @@
   color: black;
   text-decoration: none;
   display: block;
-  font-size: 1.2em;
+  font-size: 1.3rem;
   padding: 10px 15px;
   border-radius: 5px;
+  font-weight: bold;
+  transition: color 0.2s ease;
 }
 
 .navLink:hover {
-  background-color: var(--color-tertiary);
+  color: var(--color-quaternary);
 }
 
 .activeLink {
-  background-color: var(--color-secondary);
-  color: black;
+  color: var(--color-quaternary);
 }
 
 .menuButton {
@@ -60,7 +61,7 @@
   position: fixed;
   top: 15px;
   left: 15px;
-  z-index: 2;
+  z-index: 5;
   height: 40px;
   width: 40px;
   display: flex;
