--- a/styles/AppointmentModal.module.css
+++ b/styles/AppointmentModal.module.css
@@ -53,8 +53,9 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
   cursor: pointer;
-  transition: background-color 0.3s,
-  color 0.3s;
+  transition:
+    background-color 0.3s,
+    color 0.3s;
 }
 
 .timeSlot:hover {
