--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -112,8 +112,9 @@
   max-width: 642px;
   width: 100%;
   border-radius: 10px;
-  box-shadow: -10px 10px 20px 5px rgba(0, 0, 0, 0.1),
-  10px 10px 20px 5px rgba(0, 0, 0, 0.1);
+  box-shadow:
+    -10px 10px 20px 5px rgba(0, 0, 0, 0.1),
+    10px 10px 20px 5px rgba(0, 0, 0, 0.1);
   transition: 0.2s;
 }
 
