--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -50,8 +50,9 @@
   justify-content: center;
   padding-bottom: 3px;
   border-radius: 10%;
-  box-shadow: -1px 1px 10px 1px rgba(0, 0, 0, 0.1),
-  1px 1px 10px 1px rgba(0, 0, 0, 0.1);
+  box-shadow:
+    -1px 1px 10px 1px rgba(0, 0, 0, 0.1),
+    1px 1px 10px 1px rgba(0, 0, 0, 0.1);
   z-index: 3;
 }
 
