feat: refactor address link rendering and contact utils
Created a dedicated component for rendering address links and moved address and phone link logic to separate utility functions. This improves code modularity, reusability, and readability across the application.

--- a/styles/AppointmentDetailsModal.module.css
+++ b/styles/AppointmentDetailsModal.module.css
@@ -51,3 +51,14 @@
 .closeButton:hover {
   background-color: #999;
 }
+
+.link,
+.link:visited {
+  color: var(--color-quaternary);
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.link:hover {
+  color: var(--rich-brown);
+}
