--- a/styles/Notification.module.css
+++ b/styles/Notification.module.css
@@ -1,3 +1,25 @@
+.pulsatingBellContainer {
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pulsatingBell {
+  font-size: 20px;
+  color: #ff0000;
+  animation: pulsate 3s infinite;
+  background-color: transparent !important;
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  display: inline-block;
+  vertical-align: middle;
+  box-shadow: none !important;
+}
+
 .container {
   position: fixed;
   top: 20px;
@@ -18,15 +40,6 @@
   justify-content: center;
 }
 
-.pulsatingDot {
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #ff0000;
-  box-shadow: 0 0 5px 1px rgba(255, 0, 0, 0.7);
-  animation: pulsate 3s infinite;
-}
-
 .text {
   font-size: 14px;
   font-weight: bold;
@@ -41,15 +54,15 @@
 
 @keyframes pulsate {
   0% {
-    transform: scale(0.5);
+    transform: scale(0.9);
     box-shadow: 0 0 10px 2px rgba(255, 0, 0, 0.3);
   }
   50% {
-    transform: scale(0.7);
+    transform: scale(1.1);
     box-shadow: 0 0 20px 5px rgba(255, 0, 0, 0.5);
   }
   100% {
-    transform: scale(0.5);
+    transform: scale(0.9);
     box-shadow: 0 0 10px 2px rgba(255, 0, 0, 0.3);
   }
 }
